# scrapy-logexport

./: pyproject.toml
scrapy_s3log/: extensions.py
scrapy_s3logs/: extensions.py
tests/: test_extension.py
tests/manual/scrapy_project/: settings.py
tests/manual/scrapy_project/spiders/: s3log.py
tests/manual_test_scrapy_project/: scrapy.cfg
tests/manual_test_scrapy_project/manual_test/: settings.py
tests/manual_test_scrapy_project/manual_test/spiders/: s3log.py
tests/unit/: test_extension.py
