[tool.poetry]
name = "scrapy-s3log"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrapy_s3log"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
botocore = "^1.29.143"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
